2003-03-03  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03788] UFhalfclose
	* file.c (UFhalfclose): closeNews() for SCM_NEWS,NNTP

2003-02-28  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03783] pipe to "command1 | command2"
	* Bonus/utf8.cgi: added

2003-02-27  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03784] ftp directory support
	* ftp.c (AbortLoading): added
		(KeyAbort): added
		(openFTPStream): remove '~' in realpathname?
		(loadFTPDir): remove '~' in realpathname?
			keyabort
			new ex_ftpdir_name_size_date()
			add symlink information to flist
		(XD_CTOD): deleted
		(EX_COUNT_DIGIT): added
		(ex_ftpdir_name_size_date): add **link
			accept device file
			loose date check for localized server

2003-02-27  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03783] pipe to "command1 | command2"
	* etc.c (myExtCommand): redirect to subshell
	* main.c (pipeBuf): conv_to_system(cmd)
			shell_quote()
			set buf->filename, buf->buffername

2003-02-26  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03782] real linenumber for EDIT and EDIT_SCREEN
	* main.c (cur_real_linenumber): added
		(editBf): use cur_real_linenumber instead of CUR_LINENUMBER
		(editScr): ditto

2003-02-26  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03781] Debian Bug report logs - #181897: w3m submits query urls with "extra"
	* main.c (_followForm): remove tailling '?'

2003-02-25  Hironori SAKAMOTO <h-saka@lsi.nec.co.jp>

	* [w3m-dev-en 00891] Re: w3m 0.4 has been released!
	* image.c (getCharSize): set W3M_TTY here, before Imgdisplay invoke
		(openImgdisplay): no need setting W3M_TTY here

2003-02-25  Fumitoshi UKAI  <ukai@debian.or.jp>

	* version.c.in: cvs version

2003-02-24  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.4
	* version.c.in: update
	* doc/README: version 0.4, release date
	* doc-jp/README: ditto
	* NEWS: update

2003-02-24  patakuti@t3.rim.or.jp

	* [w3m-dev 03772] Compilation error on Cygwin B20.1